# ics-to-todoist

./: .bumpversion.cfg  .bumpversion.toml  .gitignore  .pdm-python  .pre-commit-config.yaml  404.html  5531498.ics  LICENSE  LICENSE.md  Pipfile  README.md  README.md.sh  add_project_structure.py  align_project_sections_tags.py  childtest.py  english.py  goa.py  ics-to-todoist.py  index.html  json-to-todoist.py  mkdocs.yml  poetry.lock.bak  pyproject.toml  pyproject.toml.bak  requirements.txt  shared.py  sitemap.xml  todoist_trials.py
.github/workflows/: add-to-project.yml  auto-assign-issues.yml  autocreate-bump-dependencies-issue.yml  deploy-docs.yml  pytest.yml  tests.yml
archive/icals/: 4906797.ics  5303160.ics  lock-in.ics  med.ics
archive/src/: english.py  goa.py  todoist_trials.py
configuration/: index.html
data/: test.ics  test_config.toml
docs/: CNAME  configuration.md  index.md
icals/: 2018-2019.ics  2019-2020.ics  Fireside Chat.ics  bl.ics  clfirst.ics  event.ics  hearts.ics  imschwenksbrunnenwesthausen.ics
ics_to_todoist/: __main__.py  todoist_helper.py
ics_to_todoist/models/: __init__.py  configuration.py  event.py  project.py  reminder_time.py
jsons/: djangocon.json
scripts/: release.sh
search/: search_index.json
src/: add_project_structure.py  align_project_sections_tags.py  childtest.py  ics_to_todoist.py  json_to_todoist.py  shared.py
src/ics_to_todoist/: __main__.py  todoist_helper.py
src/ics_to_todoist/models/: __init__.py  configuration.py  event.py
tests/: conftest.py  test_configuration.py  test_main.py  test_main_functions.py  test_reminder_time.py  test_todoist_helper.py
