[tool.poetry]
name = "ics-to-todoist"
version = "0.1.0"
description = ""
authors = ["Gabor Schulz <gabor@gaborschulz.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "ics_to_todoist" }]

[tool.poetry.scripts]
ics-to-todoist = 'ics_to_todoist.__main__:shell'

[tool.poetry.dependencies]
python = ">=3.8"
typer = { extras = ["all"], version = "^0.7.0" }
ics = "^0.7.2"
pydantic = "^1.10.2"
python-dotenv = "^0.21.0"
todoist-python = "^8.1.3"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
pylint = "^2.15.6"
types-toml = "^0.10.8.1"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
coverage = "^6.5.0"
pytest-pylint = "^0.19.0"
pytest-mypy = "^0.10.1"
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude_dirs = ["archive", "tests"]

[tool.pytest.ini_options]
python_files = "tests.py test_*.py"
addopts = "--pylint --mypy"

[tool.mypy]
exclude = [
    'archive',
    'tests'
]
ignore_missing_imports = "True"

[tool.pylint.'MASTER']
ignore = "archive,tests"
extension-pkg-whitelist = "pydantic"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 160
disable = """
    missing-module-docstring,
    duplicate-code,
    too-many-ancestors
"""