[tool.poetry]
name = "ics-to-todoist"
version = "0.4.2"
description = "A command line tool to convert entries from an .ics file to tasks in Todoist."
authors = ["Gabor Schulz"]
readme = "README.md"
license = "MIT"
homepage = "https://gaborschulz.github.io/ics-to-todoist/"
repository = "https://github.com/gaborschulz/ics-to-todoist"
# documentation = "https://gaborschulz.github.io/ics-to-todoist/"
keywords = ["ics", "todoist"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities"
]  # https://pypi.org/classifiers/
packages = [{ include = "ics_to_todoist" }]

[tool.poetry.scripts]
ics-to-todoist = 'ics_to_todoist.__main__:app'

[tool.poetry.dependencies]
python = ">=3.10,<4.0.0"
typer = { extras = ["all"], version = ">=0.7.0" }
ics = ">=0.7.2"
python-dotenv = ">=0.21.0"
synctodoist = ">=0.1.8"
pydantic = ">=2.1"
pydantic-settings = "^2.1.0"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
pylint = "^2.15.6"
types-toml = "^0.10.8.1"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
coverage = "^6.5.0"
pytest-pylint = "^0.19.0"
pytest-mypy = "^0.10.1"
coverage-badge = "^1.1.0"
types-setuptools = "^65.6.0.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude_dirs = ["archive", "tests"]

[tool.pytest.ini_options]
python_files = "tests.py test_*.py"
addopts = "--pylint --mypy"
filterwarnings = "ignore::DeprecationWarning"

[tool.coverage.run]
omit = [
    "tests/*"
]

[tool.mypy]
exclude = [
    'archive',
    'tests'
]
ignore_missing_imports = "True"

[tool.pylint.'MASTER']
ignore = "archive,tests"
extension-pkg-whitelist = "pydantic"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 160
disable = """
    missing-module-docstring,
    duplicate-code,
    too-many-ancestors,
    broad-except
"""
