[project]
name = "ics-to-todoist"
version = "0.6.0"
description = "A command line tool to convert entries from an .ics file to tasks in Todoist."
authors = [
    { name = "Gabor Schulz" },
]
dependencies = [
    "typer[all]>=0.12.5",
    "ics>=0.7.2",
    "python-dotenv>=1.0.1",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "httpx>=0.27.2",
    "todoist-api-python>=2.1.7",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
keywords = ["ics", "todoist"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities"
]  # https://pypi.org/classifiers/

[project.urls]
Homepage = "https://gaborschulz.github.io/ics-to-todoist/"
Repository = "https://github.com/gaborschulz/ics-to-todoist"

[project.scripts]
ics-to-todoist = 'ics_to_todoist.__main__:app'

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.33",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "mypy>=1.11.2",
    "ruff>=0.6.3",
    "types-toml>=0.10.8.20240310",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "coverage>=7.6.1",
    "pytest-ruff>=0.4.1",
    "pytest-mypy>=0.10.3",
    "coverage-badge>=1.1.2",
    "types-setuptools>=74.0.0.20240831",
    "bump2version>=1.0.1",
]

[tool.bandit]
exclude_dirs = ["archive", "tests", ".venv"]

[tool.pytest.ini_options]
python_files = "tests.py test_*.py"
addopts = "--ruff --mypy"
filterwarnings = "ignore::DeprecationWarning"

[tool.coverage.run]
omit = [
    "tests/*",
    ".venv/*"
]

[tool.mypy]
exclude = [
    'archive',
    'tests',
    '.venv'
]
ignore_missing_imports = "True"